Make tests pass also with new method to access offset